syntax = "proto3";

import "aelf/core.proto";

option csharp_namespace = "EBridge.Contracts.MerkleTreeContract";

message AuthorityInfo {
    aelf.Address contract_address = 1;
    aelf.Address owner_address = 2;
}